# vue-salvo-admin

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/config/: database.rs
backend/src/controllers/: menu.rs  mod.rs  operation_log.rs  permission.rs  role.rs  upload.rs  user.rs
backend/src/middleware/: auth.rs  mod.rs  operation_log.rs
backend/src/models/: menu.rs  mod.rs  operation_log.rs  permission.rs  role.rs  user.rs
backend/src/utils/: jwt.rs  password.rs
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: operation-log.js
frontend/src/components/: IconSelect.vue  PermissionTree.vue
frontend/src/layouts/: DefaultLayout.vue
frontend/src/router/: index.js  permission.js
frontend/src/store/: permission.js  theme.js  user.js
frontend/src/utils/: format.js  request.js  user.js
frontend/src/views/: 403.vue  Dashboard.vue  Login.vue
frontend/src/views/menu/: MenuList.vue
frontend/src/views/system/: MenuList.vue  OperationLogList.vue  PermissionList.vue  RoleList.vue  UserList.vue
frontend/src/views/user/: Password.vue  Profile.vue
