[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.74.3", features = ["cors"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "time",
] }
time = { version = "0.3.37", features = ["serde"] }
anyhow = "1.0.94"
thiserror = "2.0.8"
async-trait = "0.1.83"
once_cell = "1.8.0"
sha2 = "0.10.0"
base64 = "0.22.1"
