[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.74.3", features = ["serve-static", "cors"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
base64 = "0.22.1"
bcrypt = "0.16.0"
uuid = { version = "1.11.0", features = ["v4"] }
jsonwebtoken = "9.3.0"
time = "0.3"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
